--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -614,3 +614,12 @@ pre tt:after {
     font-size: 100%;
   }
 }
+.overlay {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 10px;
+  color: white;
+}
+.overlay a {
+  color: white;
+  text-decoration: none;
+}
